- Added: Common.joinStrings(int, String, String... )
- Changed: Made equality methods in sets and hashes more thorough to test for
  null combinations.
- Added/Fixed: Javadoc package names for building logger package javadocs.
- Added: Reflect.mapToNewObject(AbstractMap/Map<String, ?>, Class) and
  Reflect.mapToObject(AbstractMap/Map<String, ?>, T).
- Added: TypeProfile.getGetterMethods(), getAnnotatedPublicFields(),
  getAnnotatedGetters(), getAnnotatedSetters().
- Changed: toString() methods on some data structures.
- Added: Common.openResource().
- Added/Fixed: Reflect.createForType() now recognizes superclasses of input
  objects and will not convert them (it will cast them).
- Changed: Reflect.createForType() can convert single-character-strings to 
  characters.
- Added: Hash.union(?,?), Hash.intersection(?,?), Hash.difference(?,?), and
  Hash.xor(?,?) for set manipulation for all Hashes. 
- Created: An instantiatable version of Singleton called SingletonManager.
- Deprecated: Singleton, since SingletonManager exists.
- Fixed: Common.isWindows8() would have erroneously detected Windows 98 as
  Windows 8. Duh!

Changed in 2.19.0
=================

- Changed: Reflect.createForType(...) will not convert same types to other 
  types.
- Added: Common.urlUnescape(String) for un-escaping a URL-encoded string.
- Added: Reflect.getClasses(String) for package and classpath scanning.
- Added: Reflect.getClasses(String, ClassLoader) for package and classpath 
  scanning.
- Added: AbstractMap<?,?> and changed class hierarchy that fit its policies.
  This change will not really be noticed by end-users. 
- Added: AbstractSet<?,?> and changed class hierarchy that fit its policies.
  This change will not really be noticed by end-users. 
- Changed: A method or two has been made public in order to accommodate for
  the previous changes.
- Changed: LoggerThread behavior: not daemon anymore - log flushes all pending