@@ -14,6 +14,7 @@ Slated for 2.20.0
 - Added/Fixed: Javadoc package names for building logger package javadocs.
 - Added: Reflect.mapToNewObject(AbstractMap/Map<String, ?>, Class) and
   Reflect.mapToObject(AbstractMap/Map<String, ?>, T).
+- Added: Reflect.construct(Constructor, Object ...)
 - Added: TypeProfile.getGetterMethods(), getAnnotatedPublicFields(),
   getAnnotatedGetters(), getAnnotatedSetters().
 - Changed: toString() methods on some data structures.
